@@ -240,6 +240,9 @@ public abstract class Config {
 			xmlWriter.startElement("configuration");
 			getIndex().writeXmlConfig(xmlWriter);
 			getSchema().writeXmlConfig(xmlWriter);
+			if (urlManagerClass != null)
+				xmlWriter.startElement("urlManager", "class", urlManagerClass);
+			getStatisticsList().writeXmlConfig(xmlWriter);
 			IndexPluginTemplateList iptl = getIndexPluginTemplateList();
 			if (iptl != null)
 				iptl.writeXmlConfig(xmlWriter);
